--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -127,7 +127,7 @@ body {
   background-color: rgba(0, 0, 0, 0.4)
 }
 
-#new-todo-view {
+#new-todo-modal {
   background-color: var(--new-todo-bg-color);
   border-radius: 5px;
   padding: 50px;
@@ -139,13 +139,13 @@ body {
   height: min-content;
 }
 
-#new-todo-view > form {
+#new-todo-modal > form {
   display: flex;
   flex-direction: column;
   row-gap: 10px;
 }
 
-#new-todo-view form input[type=text] {
+#new-todo-modal form input[type=text] {
   border: none;
   background: none;
   padding: 0px;
@@ -168,25 +168,25 @@ select:focus {
   outline: none;
 }
 
-#new-todo-view > form > #properties {
+#new-todo-modal > form > #properties {
   display: flex;
   flex-direction: column;
   row-gap: 10px;
 }
 
-#new-todo-view > form > #properties div {
+#new-todo-modal > form > #properties div {
   display: flex;
 }
 
-#new-todo-view form label {
+#new-todo-modal form label {
   font-family: "Libre Baskerville", serif;
   font-size: 1rem;
   font-weight: bold;
   width: 125px;
 }
 
-#new-todo-view form select,
-#new-todo-view form input[type=date] {
+#new-todo-modal form select,
+#new-todo-modal form input[type=date] {
   background-color: var(--new-todo-bg-color);
   border: none;
   font-family: "Montserrat", sans-serif;
@@ -200,13 +200,28 @@ select:focus {
   margin-left: -20px;
 }
 
-#new-todo-view form button {
+#new-todo-modal > form > #cancel-btn {
+  width: 25px;
+  position: absolute;
+  left: 2.50%;
+  top: 3%;
+  margin-left: auto;
+  background-color: transparent;
+  border: none;
+  font-family: "Montserrat", sans-serif;
+  font-size: 1rem;
+  /* font-weight: bold; */
+  color: var(--text-color);
+  cursor: pointer;
+}
+
+#new-todo-modal > form > #add-todo-btn {
   width: 45px;
   position: absolute;
   right: 3%;
   top: 4%;
   margin-left: auto;
-  background-color: var(--accent-color);
+  background-color: var(--bg-color-green);
   border: none;
   border-radius: 5px;
   padding: 3px 0px 3px 0px;
